--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 
 {
-"liveServer.settings.root": "/config_site"
+"liveServer.settings.root": "/config_site",
+"phpserver.relativePath": "./config_site"
 }
