--- a/config_files/systemd/hostapd.conf
+++ b/config_files/systemd/hostapd.conf
@@ -4,11 +4,11 @@
 # 220402    PLH First Version
 #           Serial number addet to SSID
 
-country_code=DK
 interface=wlan0
 ssid=DanWand
+country_code=DK
 hw_mode=g
-channel=0
+channel=3
 #automatic channel select
 
 macaddr_acl=0
@@ -21,5 +21,6 @@ wpa_passphrase=DanWandConfig
 #rsn_pairwise=CCMP
 
 logger_syslog=-1
-logger_syslog_level=2
-
+logger_syslog_level=1
+logger_stdout=-1
+logger_stdout_level=1
