--- a/config_files/etc/dw_dhcpcd.conf
+++ b/config_files/etc/dw_dhcpcd.conf
@@ -1,3 +1,18 @@
+hostname
+
+clientid
+
+persistent
+
+optien rapid_commit
+
+option interface_mtu
+
+require dhcp_server_identifier
+
+slaac private
+
+
 interface wlan0
 	static ip_address=192.168.11.1/24
 	nohook wpa_supplicant
