--- a/config_files/etc/hostapd.conf
+++ b/config_files/etc/hostapd.conf
@@ -15,10 +15,10 @@ macaddr_acl=0
 auth_algs=1
 ignore_broadcast_ssid=0
 wpa=3
-wpa_passphrase=DanWandConfig
-#wpa_key_mgmt=WPA-PSK
+wpa_passphrase=danWandPassword
+wpa_key_mgmt=WPA-PSK
 #wpa_pairwise=TKIP
-#rsn_pairwise=CCMP
+rsn_pairwise=CCMP
 
 logger_syslog=-1
 logger_syslog_level=1
