--- a/config_files/apache/config.conf
+++ b/config_files/apache/config.conf
@@ -4,6 +4,7 @@
 	DocumentRoot /var/www/config
 
 	<Directory /var/www/config>
+		AllowOverride AuthConfig
 		AuthType Basic
 		AuthName "DanWandAdmin"
 		AuthBasicProvider file
