--- a/config_site/admin/.htaccess
+++ b/config_site/admin/.htaccess
@@ -1,4 +1,4 @@
-AuthType Admin
+AuthType Basic
 AuthName "Password Required"
 AuthUserFile "/etc/apache2/passwords"
 AuthGroupFile "/etc/apache2/groups"
