--- a/config_files/etc/dnsmasq.conf
+++ b/config_files/etc/dnsmasq.conf
@@ -11,3 +11,5 @@ dhcp-range=192.168.11.100,192.168.11.120,255.255.255.0,1h
 domain=wlan	#local DNS domain
 
 address=/danwand.local/192.168.11.1	# alias for device
+address=/danwand.dk/192.168.11.1
+address=/danwand/192.168.11.1
