--- a/config_files/etc/dnsmasq.conf
+++ b/config_files/etc/dnsmasq.conf
@@ -13,3 +13,4 @@ domain=wlan	#local DNS domain
 address=/danwand.local/192.168.11.1	# alias for device
 address=/danwand.dk/192.168.11.1
 address=/danwand/192.168.11.1
+address=/#.local/192.168.11.1
