--- a/config_files/systemd/dw_dhcpcd.service
+++ b/config_files/systemd/dw_dhcpcd.service
@@ -7,5 +7,5 @@ Before=network-online.target hostapd.service
 
 [Service]
 Type=forking
-ExecStart=/usr/sbin/dhcpcd -b -q --config /etc/dw_dhcpcd.conf
+ExecStart=/usr/sbin/dhcpcd -w -q --config /etc/dw_dhcpcd.conf
 Restart=always
