--- a/config_files/etc/dnsmasq.conf
+++ b/config_files/etc/dnsmasq.conf
@@ -7,7 +7,8 @@
 interface=wlan0  # listen on
 # ip address pool
 dhcp-range=192.168.11.100,192.168.11.120,255.255.255.0,1h
-
+#no default route
+dhcp-option=3
 domain=wlan	#local DNS domain
 
 address=/danwand.local/192.168.11.1	# alias for device
