--- a/config_files/systemd/avahi-alias@.service
+++ b/config_files/systemd/avahi-alias@.service
@@ -3,7 +3,7 @@ Description=Publish %I as alias for %H.local via mdns
 
 [Service]
 Type=simple
-ExecStart=/bin/bash -c "/usr/bin/avahi-publish -a -R %I $(avahi-resolve -4 -n %H.local | cut -f 2)"
+#ExecStart=/bin/bash -c "/usr/bin/avahi-publish -a -R %I $(avahi-resolve -4 -n %H.local | cut -f 2)"
 
 [Install]
 WantedBy=multi-user.target config.target
