--- a/config_files/etc/dnsmasq.conf
+++ b/config_files/etc/dnsmasq.conf
@@ -14,4 +14,10 @@ domain=wlan	#local DNS domain
 address=/danwand.local/192.168.11.1	# alias for device
 address=/danwand.dk/192.168.11.1
 address=/danwand/192.168.11.1
+address=/danwandconfig.local/192.168.11.1
+address=/danwandconfig.dk/192.168.11.1
+address=/danwandconfig.dk/192.168.11.1
+address=/danwandconfig.local/192.168.11.1
+address=/danwandconfig/192.168.11.1
+
 address=/#.local/192.168.11.1
