--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
 "phpserver.relativePath": "./config_site/",
 "python.linting.pylintEnabled": true,
 "python.linting.enabled": true,
-"phpserver.browser": "firefox"
+"phpserver.browser": "firefox",
+"python.linting.pylintCategorySeverity.refactor": "Information"
 }
