--- a/config_files/apache/config.conf
+++ b/config_files/apache/config.conf
@@ -3,6 +3,12 @@
 	ServerAdmin webmaster@danbots.com
 	DocumentRoot /var/www/config
 
+	Alias /tmp /tmp
+
+	<Directory /tmp >
+		Require all granted
+	</Directory>
+
 	<Directory /var/www/config>
 		AllowOverride AuthConfig
 		AuthType Basic
@@ -10,6 +16,10 @@
 		AuthBasicProvider file
 		AuthUserFile /etc/danwand/password
 		#Require valid-user
+		Require all granted
+	</Directory>
+
+	<Directory /tmp >
 		Require all granted
 	</Directory>
 
